# HofstadterTools

./: .buildinfo  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  README.md  README.rst  code.html  environment.yml  gallery.html  genindex.html  index.html  objects.inv  overview.html  py-modindex.html  pyproject.toml  references.html  requirements.txt  search.html  searchindex.js  theory.html  troubleshooting.html  tutorials.html
.doctrees/: code.doctree  gallery.doctree  index.doctree  overview.doctree  references.doctree  theory.doctree  troubleshooting.doctree  tutorials.doctree
.doctrees/_autosummary/: functions.arguments.doctree  functions.arguments.parse_input_arguments.doctree  functions.band_structure.U.doctree  functions.band_structure.berry_curv.doctree  functions.band_structure.doctree  functions.band_structure.geom_tensor.doctree  functions.band_structure.wilson_loop.doctree  functions.butterfly.chern.doctree  functions.butterfly.doctree  functions.doctree  functions.models.BasicHoneycombHamiltonian.doctree  functions.models.BasicKagomeHamiltonian.doctree  functions.models.BasicSquareHamiltonian.doctree  functions.models.BasicTriangularHamiltonian.doctree  functions.models.Hamiltonian.doctree  functions.models.diag_func.doctree  functions.models.doctree  functions.models.nearest_neighbor_finder.doctree  functions.models.nearest_neighbor_sorter.doctree  functions.models.peierls_factor.doctree  functions.models.reciprocal_vectors.doctree  functions.plotting.band_structure.doctree  functions.plotting.butterfly.doctree  functions.plotting.doctree  functions.utility.Logger.doctree  functions.utility.create_filename.doctree  functions.utility.doctree  functions.utility.load_data.doctree  functions.utility.read_t_from_file.doctree  functions.utility.save_data.doctree  models.doctree  models.hofstadter.Hofstadter.doctree  models.hofstadter.doctree
.doctrees/theory/: band_structure.doctree  butterfly.doctree  model.doctree
.doctrees/tutorials/: band_structure.doctree  butterfly.doctree
.github/workflows/: docs.yml  docs_remote.yml  documentation.yml  draft-pdf.yml  production-pdf.yml  publish-to-pypi.yml  pytests.yml
_autosummary/: functions.arguments.html  functions.arguments.parse_input_arguments.html  functions.band_structure.U.html  functions.band_structure.berry_curv.html  functions.band_structure.geom_tensor.html  functions.band_structure.html  functions.band_structure.wilson_loop.html  functions.butterfly.chern.html  functions.butterfly.html  functions.html  functions.models.BasicHoneycombHamiltonian.html  functions.models.BasicKagomeHamiltonian.html  functions.models.BasicSquareHamiltonian.html  functions.models.BasicTriangularHamiltonian.html  functions.models.Hamiltonian.html  functions.models.diag_func.html  functions.models.html  functions.models.nearest_neighbor_finder.html  functions.models.nearest_neighbor_sorter.html  functions.models.peierls_factor.html  functions.models.reciprocal_vectors.html  functions.plotting.band_structure.html  functions.plotting.butterfly.html  functions.plotting.html  functions.utility.Logger.html  functions.utility.create_filename.html  functions.utility.html  functions.utility.load_data.html  functions.utility.read_t_from_file.html  functions.utility.save_data.html  models.hofstadter.Hofstadter.html  models.hofstadter.html  models.html
_images/: inheritance-6997e075805bf641d32608b2068d8e0b1c8da072.png.map  inheritance-8cdfd652bf80f5810393764a7b9f8484c7e1f0bc.png.map
_modules/: index.html
_modules/functions/: arguments.html  band_structure.html  butterfly.html  models.html  plotting.html  utility.html
_modules/models/: hofstadter.html
_sources/: code.rst.txt  index.rst.txt  overview.rst.txt  references.rst.txt  theory.rst.txt  troubleshooting.rst.txt  tutorials.rst.txt
_sources/_autosummary/: functions.arguments.parse_input_arguments.rst.txt  functions.arguments.rst.txt  functions.band_structure.U.rst.txt  functions.band_structure.berry_curv.rst.txt  functions.band_structure.geom_tensor.rst.txt  functions.band_structure.rst.txt  functions.band_structure.wilson_loop.rst.txt  functions.butterfly.chern.rst.txt  functions.butterfly.rst.txt  functions.models.BasicHoneycombHamiltonian.rst.txt  functions.models.rst.txt  (+22 more)
code/: __init__.py  band_structure.py  band_structures.py  butterfly.py  environment.yml
docs/: band_structures.rst  chern_numbers.rst  fs_metric.rst  peierls_phases.rst
paper/: paper.bib  paper.md
plot/: band_structure.py  butterfly.py
theory/: band_structure.html  butterfly.html  model.html
tutorials/: band_structure.html  band_structure.ipynb  butterfly.html  butterfly.ipynb
(+107 files in other folders)
